2005-06-23  Erez Zadok  <ezk@cs.sunysb.edu>

	* configure.in: update bug-reporting address to list
	https://bugzilla.am-utils.org/ as well as the mailing list.

	* Makefile.am (EXTRA_DIST_M4): distribute new type_rpcvers_t.m4
	macro.

	* conf/transp/transp_tli.c (get_nfs_version): always use
	rpcvers_t, now that it'll be automatically discovered.

	* configure.in: check for rpcvers_t type.

	* m4/macros/type_rpcvers_t.m4: new macro to check for type of
	rpcvers_t (Some Solaris versions need it).

	* conf/nfs_prot/nfs_prot_sunos5_8.h: don't define INADDR_NONE
	here, but in the actual source files that may need it.

	* libamu/wire.c (INADDR_NONE): define INADDR_NONE if not defined
	already.

	* include/am_defs.h: define extern for sleep(3) if needed.

	* m4/macros/header_templates.m4: template for sleep(3) extern.

	* configure.in: check for extern for sleep(3), which is missing
	from some old (and buggy) versions of gcc's fixinc'ed headers.

	* conf/nfs_prot/nfs_prot_aix4_3.h: update definition of struct
	nfs_args from actual system headers.

	* conf/mount/mount_aix.c (mount_aix3): fix name of aix4 "bis"
	structure.

2005-06-22  Erez Zadok  <ezk@cs.sunysb.edu>

	* BUGS: update Solaris information about use of f/lex and
	yacc/bison.

2005-06-20  Erez Zadok  <ezk@cs.sunysb.edu>

	* minor new port: i386-pc-linux-suse9.3.

Mon Jun 20 17:48:58 2005  Rainer Orth  <ro@TechFak.Uni-Bielefeld.DE>

	* configure.in (linux/nfs_mount.h): Move __KERNEL__ definition up
	so u32 is available for <linux/sunrpc/msg_prot.h>.

2005-06-16  Erez Zadok  <ezk@cs.sunysb.edu>

	* amd/mapc.c (maptypes): move MAP_EXEC after MAP_FILE, because
	exec maps will always match when users use amd with command line
	args (not amd.conf).  Using that legacy way, unfortunately, means
	that Amd will use it's hard-coded info-service search path, which
	doesn't work for everyone.  It's much better to use amd.conf and
	specify what you want exactly.

2005-06-15  Erez Zadok  <ezk@cs.sunysb.edu>
