@@ -1,4 +1,4 @@
-*** Notes specific to am-utils version 6.1.1-pre
+*** Notes specific to am-utils version 6.1.1-rc1
 
 - minor new ports:
 	i386-pc-linux-fc4
@@ -6,6 +6,7 @@
 
 - bugs fixed:
 	* small compile problems on Solaris 6 (rpcvers_t)
+	* small compile problems on HPUX 10 (h_errno)
 	* possibly missing definition of INADDR_NONE in wire.c
 	* extern for sleep(3) may be missing on older gcc systems
 	* updated nfs_args structure on aix4.
